--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
+    "mongoose": "^8.9.4",
     "motion": "^11.15.0",
     "next": "15.1.3",
     "react": "^19.0.0",
